samples/_failures_safe/1761701908_1b0c5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_978f34c3.c: In function ‘main’:
./samples/SAFE/__tmp_978f34c3.c:150:5: error: expected expression at end of input
  150 |     add_edge(&
      |     ^~~~~~~~
./samples/SAFE/__tmp_978f34c3.c:150:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_978f34c3.c:30:6: note: declared here
   30 | void add_edge(Graph *g, int u, int v, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_978f34c3.c:150:5: error: expected declaration or statement at end of input
  150 |     add_edge(&
      |     ^~~~~~~~
